--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.thymeleaf.cache=false
+
+spring.mail.host=localhost
+spring.mail.port=25
+spring.mail.protocol=smtp
+spring.mail.defaultEncoding=UTF-8
+
