gmail smtp added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,16 @@ spring.mail.host=localhost
 spring.mail.port=25
 spring.mail.protocol=smtp
 spring.mail.defaultEncoding=UTF-8
+send.from.email= amit@localhost
 
+#spring.mail.host = smtp.gmail.com
+#spring.mail.username = deolamit11@gmail.com
+#spring.mail.password = 05922293817
+#send.from.email= deolamit11@gmail.com
+#spring.mail.properties.mail.smtp.auth = true;
+#spring.mail.properties.mail.smtp.starttls.enable = true
+#spring.mail.properties.mail.smtp.ssl.enable = true
+#spring.mail.properties.mail.socketFactory.port=587
+#spring.mail.properties.mail.socketFactory.class=javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.socketFactory.fallback=false
+#spring.mail.smtp.port= 587
